--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   my_auth_api:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: my_auth_api
     ports:
       - "5000:5000"
